# DAQ-GroundStation

./: .gitignore  README.md  dataSend.cpp  docker-compose.yaml  main.cpp  makefile  quickInstall.sh
Data_Decoder/: CANConfig.h  Decoder.cpp  makefile
File Shipper/: ShipFile.cpp  ShipFile.h  fileDownload.sh  fileShipper  main.cpp  makefile  run_fileship.sh
Live_Telemetry/: README.md  pyproject.toml
Live_Telemetry/src/: mflivetelemetry.py
include/: dataSend.h  influxDB_Config.h  sensorProcess.h
